# academy-llmops-in-azure-rabo-dec25

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README copy.md  README.md  kql_query.txt  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yaml  ci.yaml
articles/: article1.txt  article2.txt
docs/: trainer-preparation.md
exercises/: 01-calling-the-llm.ipynb  02-use-case-introduction.ipynb  03-running-the-app.ipynb  04-modularizing-the-solution.ipynb  05-evaluating-the-solution.ipynb  06-experiment-tracking.ipynb  07-containerizing-the-app.ipynb  08-deploying-the-app.ipynb  09-automate-with-cicd.ipynb  10-monitor-operational-metrics.ipynb  11-monitor-functional-metrics.ipynb  12-logging-traces.ipynb  13-collect-user-feedback.ipynb  14-iterating-on-the-system.ipynb  15-(bonus)-async-calls.ipynb  article.md
solutions/: Dockerfile  app.py  cd.yaml  ci.yaml  components.py  evaluation.py  extraction.py  makefile  test_evaluation.py  test_extraction.py
solutions/calling-the-llm/: generate-text.py
solutions/evaluating-the-solution/: evaluate-business-classification.py  evaluation-threshold.py  unit-tests.py
solutions/modularizing-the-solution/: modularize.py
solutions/use-case-introduction/: make-prompt.py  pydantic-model.py
src/llmops_training/news_reader/: data.py  evaluation.py  extraction.py  generation.py  logs.py  utils.py
src/llmops_training/news_reader/app/: app.py  components.py  utils.py
tests/: test_app.py  test_evaluation.py  test_extraction.py  test_generation.py
tests/articles/: article_0.txt  article_1.txt  article_10.txt  article_2.txt  article_3.txt  article_4.txt  article_5.txt  article_6.txt  article_7.txt  article_8.txt  article_9.txt
tests/parquet_articles/: bbc_news_alltime_train.parquet
